[4.3.0]
- Non-breaking refactor of the deprecated `Animated` classes.
- Minor optimization for `layout()` function.
- Minor JavaDoc tweaks.

[4.2.0]
- Fixed a bug related to the `globalAlphaMultiplier` attribute.
- Fixed a bug related to `centerOn` methods and some Viewports.
- Performance improvement: Events (Callbacks/Highlight/Selection/etc.) are now Pooled.
- Added a default Color (black) for the following `PieWidgetStyle` attributes: `separatorColor` and `circumferenceColor`.
- Added a Testing Menu so that Contributors can more easily test their implementations.
- Added the `NO_SELECTION` constant in `PieMenu`.
- Added a new "code example": `NestedClickDrag`.
- Minor JavaDoc tweaks and improvements.
- Updated `ShapeDrawer` version to `v2.3.0`.

[4.1.0]
- Added `AnimatedRadialGroup`.
- Minor fixes in documentation.
- Updated `ShapeDrawer` version to `v2.1.0`.

[4.0.0]
- A `Batch` does not need to be passed to the constructors anymore.
- Introduced `PieWidget` in the new design: the `RadialGroup` now doesn't deal in any way with the `ShapeDrawer`.
- `getMaxDiameter` has been renamed to `getCurrentDiameter`.
- `getMaxRadius` has been renamed to `getCurrentRadius`.
- `minRadius` has been renamed to `preferredRadius`.
- Introduced a new `individuals` demo (named "RadialButtons") to showcase the new `RadialGroup` class.
- Changed the way the scene2d `hit` method works with the widget.
- Fixed the `hit` for when a contained Actor extends beyond the limits of the widget itself.
- Fixed `RadialGroup` containing other `PieMenu`.
- Fixed non-regular width and height values on Animated widgets.
- Fixed `centerOnActor` method used on an Actor that was contained within a `Group`.

[3.1.0]
- Fixed the "floating" `Group` that contained `RadialGroup`.
- More efficient evaluation for the reset of the hover on mouse-exit.
- The `background` image can now be a `Drawable` as well (but keep in mind that `Drawable` cannot be rotated).

[3.0.0]
- Hotfix for `rotateBy()`.